add jwt, build Auth module, inject user module with auth service, create signup, login endpoints

--- a/.development.env
+++ b/.development.env
@@ -3,3 +3,7 @@ DATABASE_PORT=5432
 DATABASE_NAME=blog_nest
 DATABASE_USER=postgres
 DATABASE_PASS=postgres
+
+JWT_SECRET=asdasdsdfjksdyfu
+JWT_EXPIRE_IN=60S
+SALT_ROUND=12
