--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "set NODE_ENV=test& jest",
+    "test:watch": "set NODE_ENV=test&  jest --watch",
+    "test:cov": "set NODE_ENV=test&  jest --coverage",
+    "test:debug": "set NODE_ENV=test&  node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "set NODE_ENV=test&  jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^9.2.1",
